--- a/.github/workflows/Email.yml
+++ b/.github/workflows/Email.yml
@@ -13,6 +13,10 @@ on:
   schedule:
    - cron: '0 9 * * 1-5'
 
+permissions:
+  id-token: write
+  contents: read
+  
 jobs:
   run-r-script:
     runs-on: ubuntu-latest
