--- a/.github/workflows/Email.yml
+++ b/.github/workflows/Email.yml
@@ -32,8 +32,9 @@ jobs:
           service_account: '${{ secrets.EMAIL_SAG }}'
       - name: Install dependencies
         run: |
-          install.packages("blastula")
-          install.packages("rmarkdown")
+          Rscript -e "install.packages('remotes')"
+          Rscript -e "remotes::install_cran('blastula')"
+          Rscript -e "install.packages('rmarkdown')"
         shell: Rscript {0}
       - name: Script
         run: Rscript email_test_script.R
