--- a/.github/workflows/Email.yml
+++ b/.github/workflows/Email.yml
@@ -28,21 +28,21 @@ jobs:
         with:
           workload_identity_provider: '${{ secrets.PROVIDER_GCLOUD }}'
           service_account: '${{ secrets.EMAIL_SAG }}'
-      
-      - uses: actions/checkout@v2
+    
+      - name: Checkout repository
+        uses: actions/checkout@v2
       
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
         with: 
           use-public-rspm: true
-     
-      - name: Install dependencies
-        run: |
-          Rscript -e 'install.packages("blastula")'
-          Rscript -e 'install.packages("rmarkdown")'
-          Rscript -e 'install.packages("tidyr")'
-          Rscript -e 'install.packages("lubridate")'
-        shell: Rscript {0}
-    
+      
+      - name: Install R Dependencies
+        run: |      
+          Rscript -e "install.packages('rmarkdown')"
+          Rscript -e "install.packages('blastula')"
+          Rscript -e "install.packages('tidyr')"
+          Rscript -e "install.packages('lubridate')"   
+         
       - name: Script
         run: Rscript email_test_script.R
