--- a/.github/workflows/Email.yml
+++ b/.github/workflows/Email.yml
@@ -36,7 +36,10 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with: 
           use-public-rspm: true
-      
+          
+      - name: Set up pandoc
+        uses: r-lib/actions/setup-pandoc@master
+        
       - name: Install R Dependencies
         run: |      
           Rscript -e "install.packages('rmarkdown')"
