--- a/.github/workflows/Email2.yml
+++ b/.github/workflows/Email2.yml
@@ -1,1 +1,49 @@
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
+#
+# See https://github.com/r-lib/actions/tree/master/examples#readme for
+# additional example workflows available for the R community.
 
+name: Email 
+
+on:
+  workflow_dispatch:
+  schedule:
+   - cron: '0 9 * * 1-5'
+
+permissions:
+  id-token: write
+  contents: read
+  
+jobs:
+  run-r-script:
+    runs-on: ubuntu-latest
+    steps:  
+      
+      - name: Authenticate to Google Cloud
+        id: auth
+        uses: google-github-actions/auth@v1
+        with:
+          workload_identity_provider: '${{ secrets.PROVIDER_GCLOUD }}'
+          service_account: '${{ secrets.EMAIL_SAG }}'
+    
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
+        with: 
+          use-public-rspm: true
+          
+           
+         
+      - name: Run R Script
+        env:
+          EMAIL_CREDENTIALS_PATH: ${{ secrets.EMAIL_CREDENTIALS_PATH }} 
+        run: |
+          Rscript -e 'email_creds <- Sys.getenv("EMAIL_CREDENTIALS_PATH")'
+          Rscript -e 'print (email_creds)'
+        
+  
