--- a/.github/workflows/Email2.yml
+++ b/.github/workflows/Email2.yml
@@ -10,8 +10,8 @@ name: Email
 
 on:
   workflow_dispatch:
-  schedule:
-   - cron: '0 9 * * 1-5'
+  #schedule:
+  # - cron: '0 9 * * 1-5'
 
 permissions:
   id-token: write
@@ -36,14 +36,11 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with: 
           use-public-rspm: true
-          
-           
          
       - name: Run R Script
         env:
           EMAIL_CREDENTIALS_PATH: ${{ secrets.EMAIL_CREDENTIALS_PATH }} 
         run: |
-          Rscript -e 'email_creds <- Sys.getenv("EMAIL_CREDENTIALS_PATH")'
-          Rscript -e 'print (email_creds)'
+          Rscript -e 'print (Sys.getenv("EMAIL_CREDENTIALS_PATH"))'
         
   
