--- a/.github/workflows/Email2.yml
+++ b/.github/workflows/Email2.yml
@@ -43,5 +43,6 @@ jobs:
           EMAIL_CREDENTIALS_PATH: 'credentials_file_path' 
         run: |
           Rscript -e 'print (Sys.getenv("EMAIL_CREDENTIALS_PATH"))'
+          Rscript -e 'class (Sys.getenv("EMAIL_CREDENTIALS_PATH"))'
         
   
