--- a/.github/workflows/Email2.yml
+++ b/.github/workflows/Email2.yml
@@ -40,7 +40,7 @@ jobs:
          
       - name: Run R Script
         env:
-          EMAIL_CREDENTIALS_PATH: 'credentials_file_path' 
+          EMAIL_CREDENTIALS_PATH: ${ credentials_file_path } 
         run: |
           Rscript -e 'print (Sys.getenv("EMAIL_CREDENTIALS_PATH"))'
           Rscript -e 'class (Sys.getenv("EMAIL_CREDENTIALS_PATH"))'
