--- a/.github/workflows/Email.yml
+++ b/.github/workflows/Email.yml
@@ -26,6 +26,7 @@ jobs:
         id: auth
         uses: google-github-actions/auth@v1
         with:
+          create_credentials_file: 'true'
           workload_identity_provider: '${{ secrets.PROVIDER_GCLOUD }}'
           service_account: '${{ secrets.EMAIL_SAG }}'
     
