--- a/.github/workflows/Email2.yml
+++ b/.github/workflows/Email2.yml
@@ -6,7 +6,7 @@
 # See https://github.com/r-lib/actions/tree/master/examples#readme for
 # additional example workflows available for the R community.
 
-name: Email 
+name: Email_test_debug
 
 on:
   workflow_dispatch:
