--- a/.github/workflows/Email2.yml
+++ b/.github/workflows/Email2.yml
@@ -42,13 +42,16 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with: 
           use-public-rspm: true
-         
+      - name: Install R Dependencies
+        run: |           
+          Rscript -e "install.packages('blastula')"
+          
+          
       - name: Run R Script
         env:
           EMAIL_CREDENTIALS_PATH:  ${{ steps.auth.outputs.credentials_file_path }}
-        run: |
-          Rscript -e 'print (Sys.getenv("EMAIL_CREDENTIALS_PATH"))'
-          Rscript -e 'print (Sys.getenv("EMAIL_CREDENTIALS_PATH"))'
+        run: |          
+          Rscript -e 'print (create_smtp_creds_file (Sys.getenv("EMAIL_CREDENTIALS_PATH")))'
           Rscript -e 'class (Sys.getenv("EMAIL_CREDENTIALS_PATH"))'
         
   
