--- a/.github/workflows/email_gmailr.yml
+++ b/.github/workflows/email_gmailr.yml
@@ -10,8 +10,8 @@ name: Email gmailR
 
 on:
   workflow_dispatch:
-  schedule:
-   - cron: '0 9 * * 1-5'
+  #schedule:
+  # - cron: '0 9 * * 1-5'
 
 permissions:
   id-token: write
