--- a/.github/workflows/Email.yml
+++ b/.github/workflows/Email.yml
@@ -10,8 +10,8 @@ name: Email
 
 on:
   workflow_dispatch:
-  schedule:
-   - cron: '0 13 * * 1-5'
+  #schedule:
+  # - cron: '0 13 * * 1-5'
 
 permissions:
   id-token: write
