--- a/.github/workflows/Email.yml
+++ b/.github/workflows/Email.yml
@@ -40,5 +40,10 @@ jobs:
           Rscript -e "install.packages('lubridate')"   
          
       - name: Run R Script
+      - name: Run R Script with SMTP Credentials
+        env:
+          SMTP_USER: ${{ secrets.SMTP_USER }}  
+          SMTP_PASS: ${{ secrets.SMTP_PASS }} 
         run: Rscript email_test_script.R
+       
   
