--- a/.github/workflows/Email.yml
+++ b/.github/workflows/Email.yml
@@ -26,8 +26,10 @@ jobs:
         with: 
           use-public-rspm: true
           
-      - name: Set up pandoc
-        uses: r-lib/actions/setup-pandoc@master
+      - name: Install Pandoc
+        run: |
+          sudo apt-get install pandoc -y
+          echo "RSTUDIO_PANDOC=$(which pandoc)" >> $GITHUB_ENV
           
                 
       - name: Install R Dependencies
