--- a/.github/workflows/email_2.yml
+++ b/.github/workflows/email_2.yml
@@ -40,10 +40,14 @@ jobs:
           Rscript -e "install.packages('lubridate')"   
          
       
-      - name: Run R Script with SMTP Credentials
+      - name: SMTP Credentials   
         env:
-          SMTP_CREDS: ${{ secrets.SMTP_CREDS }}    
-        run: Rscript -e 'print (Sys.getenv("SMTP_CREDS")); class (Sys.getenv("SMTP_CREDS")); str (Sys.getenv("SMTP_CREDS")) '
+          SMTP_CREDS_BASE64: ${{ secrets.SMTP_CREDS }}  # Get the Base64 string from GitHub Secrets
+        run: |
+          echo "$SMTP_CREDS" | base64 --decode > iot_creds  # Decode and save to file
+          
+      - name: run R
+        run: Rscript -e 'print (creds_file("iot_creds"))'
 
        
   
